# railscanner

./: Cargo.toml  README.md
src/: Settings.toml  endpoint.rs  main.bak  main.rs
src/endpoint/: request.rs  response.rs
src/navitia/: response.rs
