[package]
name = "railscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
awc = { version = "3", features = ["rustls"] }
config = "0.14.0"
env_logger = "0.10.0"
http = "0.2.9"
log = "0.4"
once_cell = "1.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
